ALL TESTS PASS -Minor tweaks suggested by FindBugs. -More JavaDoc. -Removed dead methods. -Added A_Atom.atomName() to break accidental polymorphism of A_BasicObject.name(). -L2_EXPLODE_CONTINUATION now captures some values that are only used when propagating register information. -L2Instruction no longer holds a propagationAction().  L2Operations that used it now do things differently. -Updated L2Translator.generateCall(A_Bundle, A_Type) accordingly. -L2Translator.optimize() is still broken and disabled.